# voronator-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: delaunator.rs
examples/: benchmark.rs  plot-triangulation.rs  plot-voronoi.rs  simple-triangulation.rs  voronoi-svg.rs
src/: clip.rs  delaunator.rs  lib.rs  polygon.rs
src/delaunator/: mod.rs
tests/: delaunator.rs  tests.rs
