[package]
name = "voronator"
version = "0.1.0"
authors = ["Felipe Santos <fesoliveira@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.2"
rand = "0.7.3"
serde_json = "1.0.54"
rand_distr = "0.2.2"
plotters = "0.2.15"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bench]]
name = "delaunator"
harness = false