[package]
name = "voronator"
version = "0.2.0"
authors = ["Felipe Santos <fesoliveira@outlook.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/fesoliveira014/voronator-rs"
description = "Implements the Voronoi diagram construction as a dual of the Delaunay triangulation for a set of points and the construction of a centroidal tesselation of a Delaunay triangulation."
categories = ["algorithms", "data-structures", "graphics", "visualization"]
keywords = ["voronoi", "delaunay", "diagram"]

[dependencies]
rayon = "1.5"

[dev-dependencies]
criterion = "0.3.2"
rand = "0.7.3"
serde_json = "1.0.54"
rand_distr = "0.2.2"
plotters = "0.2.15"
svg = "0.9.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bench]]
name = "delaunator"
harness = false