[package]
name = "voronator"
version = "0.3.0"
authors = ["Felipe Santos <fesoliveira@outlook.com>"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/fesoliveira014/voronator-rs"
description = "Implements the Voronoi diagram construction as a dual of the Delaunay triangulation for a set of points and the construction of a centroidal tesselation of a Delaunay triangulation."
categories = ["algorithms", "data-structures", "graphics", "visualization"]
keywords = ["voronoi", "delaunay", "diagram"]

[features]
default = ["rayon"]
rayon = ["maybe_parallel_iterator/rayon"]

[dependencies]
maybe_parallel_iterator = "0.12.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
serde_json = "1.0.54"
rand_distr = "0.4"
plotters = "0.3.7"
svg = "0.18.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bench]]
name = "delaunator"
harness = false